﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

INSTALLER
	Fixed: Argument "" isn't numeric in numeric eq (==) at engine/PerlLib/Package/FrontEnd/Installer.pm line 270
	Fixed: Could not enable service when unit file is a symlink due to 'No such file or directory' error (systemd)
	Fixed: Mariadb SQL server not selectable on fresh install
	Fixed: Missing mysql-common package in MariaDB package sections (Debian Jessie)

------------------------------------------------------------------------------------------------------------------------
1.2.16
------------------------------------------------------------------------------------------------------------------------

2016-03-10: Laurent Declercq
	RELEASE i-MSCP 1.2.16

CONFIG
	Added: /dev/random and /dev/urandom to open_basedir (PHP)

BACKEND
	Added: iMSCP::Service::hasService() method
	Backported: iMSCP::Provider::NetworkInterface from 1.3.x branch - Provider for adding/removing IP addresses
	Backported: iMSCP::Net changes from 1.3.x branch
	Changed: IP addresses are now persistent (they are added into /etc/network/interfaces file)
	Fixed: Could not create SQL user when using MariaDB SQL remote server
	Fixed: Ip addresses are not validated correctly in iMSCP::Net
	Fixed: macvlan interfaces not properly mapped in iMSCP::Net
	Fixed: Shell arguments must be escaped in imscp-pkt-mngr and imscp-sw-mngr

FRONTEND
	Added: SSL status field on domain management page (Client interface)
	Fixed: Could not add/edit SQL user when using MariaDB server - wrong syntax 'PASSWORD EXPIRE NEVER' ...
	Fixed: Exception raised due to missing `ZIP` configuration variable
	Fixed: Wrong error handling in cert_view.php (openssl_x509_checkpurpose function also returns -1 which is not FALSE)

INSTALLER